most of js logic is complete

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
                 <!-- <img src="./img/trump1.jpeg" alt="Donald Trump on a podium with his right hand raised"> -->
                 <div class="textContainer">
-                    <p class="quote">“<span id="theQuote">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, autem? Laboriosam nulla et id delectus obcaecati commodi, minima sint culpa.</span>”</p>
+                    <p class="quote">“<span id="theQuote"></span>”</p>
                 </div>
                 
             </div>
