added one media query

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><button id="notButton" class="responseButton">Not</button></li>
             </ul>
             
-            <p class="cta">Use one of the buttons above to choose if the quote above is or isn't Trump</p>
+            <p class="cta">Use one of the buttons above to choose if the quote is or isn't Trump</p>
             
             <!-- popup that appears once the user has clicked on a possible anwer -->
             <div class="answerPopup disappear">
