finished the media queries and added the score indcator below the h1

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
         <div class="wrapper">
             <h1>trump or not</h1>
+            <p class="scoreLine">Your score: <span id="rightAnswers">0</span> out of <span id="totalAttempts">0</span> </p>
         </div>        
     </header>
     <main>
