final review. Deleted unecessary comment

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <title>Project 2 - Jakob and Andres</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="wrapper">
             <h1>trump or not</h1>
+            <!-- Counter -->
             <p class="scoreLine">Your score: <span id="rightAnswers">0</span> out of <span id="totalAttempts">0</span> </p>
         </div>        
     </header>
+    <!-- Header ends -->
     <main>
         
         <div class="wrapper">
